kyverno-policies/test-env/lab7-openshift-policies/kyverno-node-exporter/kyverno-node-exporter.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name:  kyverno-node-exporter
  annotations:
    policies.kyverno.io/title: node-exporter-custom
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.9.2
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Custom Policy for node-exporter deployment at Visa     
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - openshift-apiserver
            names:
              - apiserver-7877554df-4xmhw
              - apiserver-7877554df-7n6ks
              - apiserver-7877554df-fvzqb
              - apiserver-7877554df-tc8zc
              - apiserver-7877554df-zgdw6
        - resources:
            kinds:
              - Pod
            namespaces:
              - openshift-authentication
            names:
              - oauth-openshift-5b678f9cb7-825tz
              - oauth-openshift-5b678f9cb7-82dk7
              - oauth-openshift-5b678f9cb7-gcgw6
              - oauth-openshift-5b678f9cb7-sgvjq
              - oauth-openshift-5b678f9cb7-tmzvp
        - resources:
            kinds:
              - Pod
            namespaces:
              - openshift-monitoring
            names:
              - node-exporter-7w626
              - node-exporter-87pxk
              - node-exporter-9xgbv
              - node-exporter-cvbhj
              - node-exporter-gkpqc
              - node-exporter-v8knz
              - node-exporter-v9plf
        - resources:
            kinds:
              - Pod
            namespaces:
              - openshift-oauth-apiserver
            names:
              - apiserver-54d8897bdf-lcnpr
              - apiserver-54d8897bdf-m9gtb
              - apiserver-54d8897bdf-qdp8l
              - apiserver-54d8897bdf-qnfm7
              - apiserver-54d8897bdf-wnwsf
      validate:
        message: >-
          Policy for node-exporter.         
        pattern:
          spec:
            hostNetwork: true
            =(hostIPC): true
            =(hostPID): true 
            securityContext:
              runAsUser: "?*"
              fsGroup: "?*"
              supplementalGroups: "?*" 
            =(ephemeralContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            =(initContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            containers:
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
    - name: host-ports
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Use of host ports. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set between `0-65535`.          
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            =(initContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            containers:
              - =(ports):
                  - =(hostPort): "0-65535"
